turn_lexer_derive/test/test08-reject_multiple_skip.stderr
error: Multiple definitions of #[skip = ...].
 --> $DIR/test08-reject_multiple_skip.rs:5:3
  |
5 | #[skip = "421"]
  |   ^^^^
